--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,7 @@
                 "-g",
                 "${file}",
                 "${workspaceFolder}/rgdic.cpp",
+                "${workspaceFolder}/global_dic.cpp",
                 "-I", "D:/Opencv-4.1.0.0/OpenCV-MinGW-Build-OpenCV-4.1.0-x64/include",  // 包含路径   头文件   编译的时候到这个路径下找头文件  编译审生成可重定位文件
 				"-L", "D:/Opencv-4.1.0.0/OpenCV-MinGW-Build-OpenCV-4.1.0-x64/x64/mingw/bin", // 库路径   动态链接库地址，可执行文件运行起来需要这些库提供的机器码
 				// "-l","libopencv_world4100",           // 链接需要使用这些dll作为可重定位文件
